[package]
name = "game_session"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0" }
game_session_io = { path = "io" }
wordle_io = { path = "../wordle_program/io" }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0" }
game_session_io = { path = "io" }
wordle_io = { path = "../wordle_program/io" }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0" }
game_session_io = { path = "io" }
wordle_io = { path = "../wordle_program/io" }
