[package]
name = "game_session_io"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0" }
gmeta = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
wordle_io = { path = "../../wordle_program/io" }


[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", tag = "v1.7.0" } 
wordle_io = { path = "../../wordle_program/io" }
